@@ -1,5 +1,5 @@
 // Copyright 2002-2011, University of Colorado
-package edu.colorado.phet.sugarandsaltsolutions.common.view.faucet;
+package edu.colorado.phet.common.piccolophet.nodes.faucet;
 
 import java.awt.Color;
 import java.awt.Dimension;
