@@ -1,9 +1,6 @@
 button_pressed.png source=PhET
 button_unpressed.png source=PhET
-faucet.png author=PhET
 salt_1.png author=PhET
 sugar_closed.png author=PhET
 sugar_open.png author=PhET
 dropper.png author=laobc source=http://www.openclipart.org/detail/63955/dropper-by-laobc license=public domain
-faucet_front.png author=PhET notes=NP
-faucet_pipe.png author=PhET notes=NP
