@@ -61,8 +61,6 @@ public class SugarAndSaltSolutionsResources {
 
     //Images
     public static class Images {
-        public static final BufferedImage FAUCET_FRONT = RESOURCES.getImage( "faucet_front.png" );
-        public static final BufferedImage FAUCET_PIPE = RESOURCES.getImage( "faucet_pipe.png" );
         public static final BufferedImage SALT_1 = RESOURCES.getImage( "salt_1.png" );
         public static final BufferedImage SALT_EMPTY = RESOURCES.getImage( "salt_empty.png" );
         public static final BufferedImage SALT_MICRO = RESOURCES.getImage( "salt_micro.png" );
