@@ -1,3 +1,4 @@
+Moved sugar-and-salt-solutions faucet to piccolo-phet
 Internal changes to separate code from first two tabs
 Water tab: Fixed: Sucrose repels each other because C12H22O11 has net charge of +11
 Updated internationalization
